# Ant1Bot

./: .env  README.md  pyproject.toml  start.bat
config/: 广播排除群聊.json  开关.json
config/template/: 1009333478.html
config/群消息数据/1009333478/: 2024-10-23.json  2024-10-24.json  history.json
config/群消息数据/122130047/: 2024-10-23.json
data/setu4/: setu_perm_cfg.json
static/: arcades.json  config.json  group_alias_switch.json  group_guess_switch.json  music_alias.json  temp_pie.html
